--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.72",
+    "@dnd-kit/core": "^6.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -35,6 +36,7 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.456.0",
+    "nanoid": "^5.0.8",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -43,7 +45,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
