--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "lucide-react": "^0.456.0",
     "nanoid": "^5.0.8",
     "next": "^15.0.1",
+    "next-themes": "^0.4.3",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
